--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-react-hooks": "0.0.0"
+    "eslint-plugin-react-hooks": "0.0.0",
+    "react-test-renderer": "^16.6.3"
   }
 }
