--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "npm-run-all": "^4.1.5",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p start:react start:server",
+    "start:react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "start:server": "node ./server.js"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -30,7 +36,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@storybook/addon-knobs": "^4.0.12",
+    "@storybook/react": "^4.0.12",
     "eslint-plugin-react-hooks": "0.0.0",
-    "react-test-renderer": "^16.6.3"
+    "react-test-renderer": "^16.6.3",
+    "react-testing-library": "^5.3.1"
   }
 }
